@@ -1,3 +1,7 @@
+2010-12-15:
+	* (mhatle) add sqlite call profiling, enable with NPROFILE
+	* (mhatle) as a result of profiling, optimize inode search
+
 2010-12-14:
 	* (mhatle) restructure wrapfuncs.c
 
